syntax = "proto3";

package shortener;

option go_package = "github.com/kingxl111/url-shortener/pkg/shortener/shortener;shortener";

service URLShortener {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
}

message URL {
  string original_url = 1;
  string short_url = 2;
}

message CreateRequest {
  string original_url = 1;
}

message CreateResponse {
  string short_url = 1;
}

message GetRequest {
  string short_url = 1;
}

message GetResponse {
  string original_url = 1;
}